[gd_scene load_steps=8 format=3 uid="uid://fsx5rawuplg7"]

[ext_resource type="Script" uid="uid://2xh21xbmx45i" path="res://menu_ui/settings.gd" id="1"]
[ext_resource type="Theme" uid="uid://dy58d31fw2wn8" path="res://themes/text_normal.tres" id="2_tvpij"]
[ext_resource type="StyleBox" uid="uid://0mthtc2t6wh4" path="res://assets/color/black.tres" id="3_1wg4y"]
[ext_resource type="AudioStream" uid="uid://cuebf5ffmk1af" path="res://assets/music/mixkit/mixkit-cool-interface-click-tone-2568.wav" id="3_fe80l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sy4xk"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1wg4y"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bah4t"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.252028, 0.252028, 0.252028, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_tvpij")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"Header"
theme_override_font_sizes/font_size = 125
text = "Settings"
horizontal_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="LABEL" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="AudioVolumeRow" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4/LABEL"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4/LABEL/AudioVolumeRow"]
layout_mode = 2
text = "AUDIO"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4/LABEL"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="FullscreenLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4/LABEL/HBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4/LABEL"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VSyncLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4/LABEL/HBoxContainer2"]
layout_mode = 2
text = "V-Sync"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4/LABEL"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MaxFPSLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4/LABEL/HBoxContainer3"]
layout_mode = 2
text = "FPS"

[node name="CHANGER" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="AudioVolumeSlider" type="HSlider" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4/CHANGER"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/grabber_area = ExtResource("3_1wg4y")
theme_override_styles/grabber_area_highlight = ExtResource("3_1wg4y")
value = 50.0

[node name="FullscreenDropdown" type="OptionButton" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4/CHANGER"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_1wg4y")
theme_override_constants/arrow_margin = 20

[node name="VSyncDropdown" type="OptionButton" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4/CHANGER"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_1wg4y")
theme_override_constants/arrow_margin = 20

[node name="MaxFPSDropdown" type="OptionButton" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4/CHANGER"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/h_separation = 100
theme_override_styles/normal = ExtResource("3_1wg4y")
theme_override_constants/arrow_margin = 20

[node name="ApplyButton" type="Button" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.494118, 0.709804, 0.882353, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_styles/focus = SubResource("StyleBoxFlat_sy4xk")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_sy4xk")
theme_override_styles/disabled = SubResource("StyleBoxFlat_sy4xk")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_sy4xk")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_sy4xk")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_sy4xk")
theme_override_styles/hover = SubResource("StyleBoxFlat_sy4xk")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_sy4xk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sy4xk")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_sy4xk")
theme_override_styles/normal = SubResource("StyleBoxFlat_sy4xk")
text = "Apply"

[node name="ResetButton" type="Button" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.494118, 0.709804, 0.882353, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_styles/focus = SubResource("StyleBoxFlat_1wg4y")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_1wg4y")
theme_override_styles/disabled = SubResource("StyleBoxFlat_1wg4y")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_1wg4y")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_1wg4y")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_1wg4y")
theme_override_styles/hover = SubResource("StyleBoxFlat_1wg4y")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_1wg4y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1wg4y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_1wg4y")
theme_override_styles/normal = SubResource("StyleBoxFlat_1wg4y")
text = "Default"

[node name="BackButton" type="Button" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 20)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.494118, 0.709804, 0.882353, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_styles/focus = SubResource("StyleBoxFlat_bah4t")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_bah4t")
theme_override_styles/disabled = SubResource("StyleBoxFlat_bah4t")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_bah4t")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bah4t")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_bah4t")
theme_override_styles/hover = SubResource("StyleBoxFlat_bah4t")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_bah4t")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bah4t")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_bah4t")
theme_override_styles/normal = SubResource("StyleBoxFlat_bah4t")
text = "Back"

[node name="button_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fe80l")

[connection signal="item_selected" from="Control/MarginContainer/VBoxContainer/HBoxContainer4/CHANGER/FullscreenDropdown" to="." method="_on_fullscreen_dropdown_item_selected"]
[connection signal="item_selected" from="Control/MarginContainer/VBoxContainer/HBoxContainer4/CHANGER/VSyncDropdown" to="." method="_on_v_sync_dropdown_item_selected"]
[connection signal="item_selected" from="Control/MarginContainer/VBoxContainer/HBoxContainer4/CHANGER/MaxFPSDropdown" to="." method="_on_max_fps_dropdown_item_selected"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/ApplyButton" to="." method="_on_apply_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
